# vulnerable-flask-llm-app

./: .gitignore  README.md  app.py  install.sql  models.py  pyproject.toml  utils.py
templates/: summaries.html  upload.html
